--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <script>
-        window.location.href = "https://www.taobao.com/"
+        window.location.href = "https://www.baidu.com/"
     </script>
 </body>
 </html>
